Update các trang bánh sinh nhật, bánh cưới, snack cake ở trang chưa login

--- a/pages/birthday-cake-1-logged.html
+++ b/pages/birthday-cake-1-logged.html
@@ -152,86 +152,261 @@
     <div class="position-relative">
       <!-- Nút Back -->
       <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
-        style="top: -40px; left: -360px; z-index: 1000;">
+        style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
     </div>
 
     <!-- Menu 3 gạch -->
-    <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
+    <div class="dropdown position-absolute" style="top: -90px; right: -60px">
       <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown" data-bs-toggle="dropdown"
         aria-expanded="false">
         <i class="fas fa-bars"></i>
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-        <li><a class="dropdown-item" href="birthday-cake-1-logged.html">Birthday Cake</a></li>
-        <li><a class="dropdown-item" href="wedding-cake-1-logged.html">Wedding Cake</a></li>
-        <li><a class="dropdown-item" href="custom-cake-1-logged.html">Custom Cake</a></li>
+        <li>
+          <a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
+        </li>
       </ul>
     </div>
-    <!-- Grid bánh -->
-    <div class="row g-4 mt-5">
-      <!-- Cake 1 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.1</a></h6>
-            <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
-            </p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-              Read More
-            </button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
+    <!-- Dropdown Sắp xếp -->
+    <div class="dropdown position-absolute" style="top: -90px; right: 55px">
+      <select class="form-select" style="width: 150px;">
+        <option>Mặc định</option>
+        <option>Giá tăng dần</option>
+        <option>Giá giảm dần</option>
+        <option>Tên A-Z</option>
+        <option>Tên Z-A</option>
+      </select>
+    </div>
+
+    <div class="dropdown position-absolute" style="top: -90px; right: 220px">
+      <select class="form-select" style="width: 120px;">
+        <option value="Số lượng">Số lượng</option>
+        <option value="8">8</option>
+        <option value="12">12</option>
+        <option value="16">16</option>
+      </select>
+    </div>
+
+
+
+    <!-- Main content: Advanced Search + Cake list -->
+    <div class="position-relative">
+      <!-- Advanced Search Section (đưa ra ngoài để nằm dưới nút Back) -->
+      <div class="card p-4 shadow-sm advanced-search position-absolute" style="top: 0; left: -300px;">
+        <h5 class="text-primary mb-3">
+          <i class="fas fa-search me-2"></i>Advanced Search
+        </h5>
+
+        <div class="mb-3">
+          <label for="searchName" class="form-label fw-semibold">Search by Name</label>
+          <input type="text" id="searchName" class="form-control" placeholder="Enter cake name..." />
+        </div>
+
+        <div class="mb-3">
+          <select class="form-select mb-2">
+            <option>All Categories</option>
+            <option>Birthday</option>
+            <option>Wedding</option>
+            <option>Snack</option>
+          </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="priceRange" class="form-label fw-semibold">Price Range:
+            <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
+          </label>
+          <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
+        </div>
+
+        <div class="d-flex justify-content-end">
+          <button class="btn btn-primary">
+            <i class="fas fa-filter me-2"></i>Filter
+          </button>
         </div>
       </div>
 
-      <!-- Cake 2 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.2</a></h6>
-            <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
-            </p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
-        </div>
-      </div>
 
-      <!-- Cake 3 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.3</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
-        </div>
-      </div>
+      <!-- Cake Grid -->
+      <div class="main-content">
+        <div class="cake-list">
+          <div class="cake-page d-flex flex-column">
 
-      <!-- Cake 4 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.4</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+
+            <!-- Hàng 2: Advanced Search + Cake list -->
+            <div class="d-flex align-items-start gap-4 flex-wrap">
+              <!-- Danh sách bánh -->
+              <div class="cake-list flex-grow-1">
+                <div class="row g-4">
+                  <!-- Cake 1 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-1.jpg" class="card-img-top" alt="Birthday Cake 1" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho
+                          những bữa tiệc nhỏ ấm cúng.
+                        </p>
+                        <h5 class="fw-semibold">$45.99</h5>
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1.html'">
+                          Read More
+                        </button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 2 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-2.jpg" class="card-img-top" alt="Birthday Cake 2" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Vani Trái Cây</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh vani mềm xốp, kèm kem bơ thơm ngậy, được trang trí bằng trái cây tươi theo mùa, mang
+                          hương vị thanh mát.
+                        </p>
+                        <h5 class="fw-semibold">$39.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 3 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Red Velvet</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh Red Velvet đỏ rực, kết hợp kem phô mai béo ngậy, thích hợp cho những bữa tiệc nổi bật và
+                          sang trọng.
+                        </p>
+                        <h5 class="fw-semibold">$49.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 4 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
+                          hảo cho tín đồ socola.
+                        </p>
+                        <h5 class="fw-semibold">$52.99</h5>
+
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 5 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
+                          hảo cho tín đồ socola.
+                        </p>
+                        <h5 class="fw-semibold">$52.99</h5>
+
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 6 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Dâu Tươi</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh bông lan mềm kết hợp kem tươi và lớp dâu tươi mọng nước, mang lại hương vị ngọt ngào và
+                          tươi mát.
+                        </p>
+                        <h5 class="fw-semibold">$44.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 7 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh caramel mềm mịn, lớp kem bơ thơm, kết hợp caramel mặn ngọt, tạo điểm nhấn đặc biệt cho
+                          bữa tiệc.
+                        </p>
+                        <h5 class="fw-semibold">$46.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 8 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh phô mai béo ngậy, phủ lớp dâu tây tươi, mang đến sự kết hợp hoàn hảo giữa vị chua và
+                          ngọt.
+                        </p>
+                        <h5 class="fw-semibold">$50.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
