--- a/pages/snack-cake-2.html
+++ b/pages/snack-cake-2.html
@@ -197,15 +197,134 @@
               <!-- Danh sách bánh -->
               <div class="cake-list flex-grow-1">
                 <div class="row g-4">
-                  <!-- Cake 17 -->
+                  <!-- Cake 1 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-17.jpg" class="card-img-top" alt="Birthday Cake 17" />
+                      <img src="../img/snack-9.png" class="card-img-top" alt="Birthday Cake 1" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Socola Vừa Ngọt</a></h6>
                         <p class="mb-3 flex-grow-1">
-                          Bánh bắp thơm ngọt tự nhiên kết hợp cùng lớp kem sữa béo mịn, mang đến hương vị dịu nhẹ và
-                          thanh tao.
+                          Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi. Hoàn hảo cho
+                          những bữa tiệc nhỏ ấm cúng.
+                        </p>
+                        <h5 class="fw-semibold">$45.99</h5>
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1.html'">
+                          Read More
+                        </button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 2 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-10.jpg" class="card-img-top" alt="Birthday Cake 2" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Vani Trái Cây</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh vani mềm xốp, kèm kem bơ thơm ngậy, được trang trí bằng trái cây tươi theo mùa, mang
+                          hương vị thanh mát.
+                        </p>
+                        <h5 class="fw-semibold">$39.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 3 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-11.jpg" class="card-img-top" alt="Birthday Cake 3" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Red Velvet</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh Red Velvet đỏ rực, kết hợp kem phô mai béo ngậy, thích hợp cho những bữa tiệc nổi bật và
+                          sang trọng.
+                        </p>
+                        <h5 class="fw-semibold">$49.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 4 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-12.jpeg" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
+                          hảo cho tín đồ socola.
+                        </p>
+                        <h5 class="fw-semibold">$52.99</h5>
+
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 5 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-13.png" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Sô-Cô-La Hazelnut</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Lớp bánh socola mềm, nhân kem hazelnut giòn tan, trang trí socola bào và hạt phỉ, món quà hoàn
+                          hảo cho tín đồ socola.
+                        </p>
+                        <h5 class="fw-semibold">$52.99</h5>
+
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 6 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-14.png" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Dâu Tươi</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh bông lan mềm kết hợp kem tươi và lớp dâu tươi mọng nước, mang lại hương vị ngọt ngào và
+                          tươi mát.
+                        </p>
+                        <h5 class="fw-semibold">$44.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 7 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/snack-15.png" class="card-img-top" alt="Birthday Cake 4" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Mặn Ngọt</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh caramel mềm mịn, lớp kem bơ thơm, kết hợp caramel mặn ngọt, tạo điểm nhấn đặc biệt cho
+                          bữa tiệc.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
                         <button class="btn btn-primary mt-2">Read More</button>
@@ -216,127 +335,17 @@
                     </div>
                   </div>
 
-                  <!-- Cake 18 -->
+                  <!-- Cake 8 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
+                      <img src="../img/snack-16.jpeg" class="card-img-top" alt="Birthday Cake 4" />
                       <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Phô Mai Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
-                          Hương caramel ngọt ngào kết hợp cùng chút mặn nhẹ từ muối biển, mang đến vị cân bằng tinh tế.
+                          Bánh phô mai béo ngậy, phủ lớp dâu tây tươi, mang đến sự kết hợp hoàn hảo giữa vị chua và
+                          ngọt.
                         </p>
-                        <h5 class="fw-semibold">$52.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 19 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-19.jpg" class="card-img-top" alt="Birthday Cake 19" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Socola Đen</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Dành cho tín đồ socola đích thực — bánh bông lan đậm vị phủ lớp kem socola đen nguyên chất.
-                        </p>
-                        <h5 class="fw-semibold">$57.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 20 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-20.jpg" class="card-img-top" alt="Birthday Cake 20" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Hương vị chua thanh của chanh dây kết hợp với kem tươi ngọt nhẹ, tạo cảm giác mát lạnh sảng
-                          khoái.
-                        </p>
-                        <h5 class="fw-semibold">$48.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 21 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Hòa quyện giữa vị chua dịu của việt quất và dâu tây, mang đến hương vị tươi mới và hấp dẫn.
-                        </p>
-                        <h5 class="fw-semibold">$54.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 22 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Dành cho những ai yêu thích hương vị đặc trưng của sầu riêng, bánh mềm mịn cùng lớp kem béo
-                          ngậy.
-                        </p>
-                        <h5 class="fw-semibold">$59.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 23 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-23.jpg" class="card-img-top" alt="Birthday Cake 23" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Vị mát lạnh của bạc hà hòa quyện cùng lớp socola đắng nhẹ, tạo cảm giác tươi mới và sang
-                          trọng.
-                        </p>
-                        <h5 class="fw-semibold">$50.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Cake 24 -->
-                  <div class="col-md-3 col-sm-6">
-                    <div class="card h-100 text-center">
-                      <img src="../img/wdcake-24.jpg" class="card-img-top" alt="Birthday Cake 24" />
-                      <div class="card-body d-flex flex-column">
-                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
-                        <p class="mb-3 flex-grow-1">
-                          Vị cam tươi mát kết hợp với hạnh nhân rang giòn, tạo nên chiếc bánh vừa thơm vừa thanh nhẹ.
-                        </p>
-                        <h5 class="fw-semibold">$49.99</h5>
+                        <h5 class="fw-semibold">$50.99</h5>
                         <button class="btn btn-primary mt-2">Read More</button>
                         <button class="btn btn-primary mt-2">
                           <i class="fas fa-shopping-cart me-2"></i>Add to cart
@@ -354,10 +363,7 @@
       </div>
     </div>
   </div>
-
-
-  </div>
-
+  
   <!-- Pagination -->
   <div class="d-flex justify-content-center mt-4">
     <nav aria-label="Cake list pages">
@@ -366,16 +372,16 @@
           <a class="page-link" href="#" tabindex="-1">Previous</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-1.html">1</a>
-        </li>
-        <li class="page-item">
-          <a class="page-link" href="birthday-cake-2.html">2</a>
+          <a class="page-link" href="snack-cake-1.html">1</a>
         </li>
         <li class="page-item active">
-          <a class="page-link" href="birthday-cake-3.html">3</a>
+          <a class="page-link" href="snack-cake-2.html">2</a>
         </li>
-        <li class="page-item disabled">
-          <a class="page-link" href="birthday-cake-2.html">Next</a>
+        <li class="page-item">
+          <a class="page-link" href="snack-cake-3.html">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="snack-cake-3.html">Next</a>
         </li>
       </ul>
     </nav>
@@ -394,7 +400,7 @@
               </h1>
             </a>
             <p class="mt-3">
-              We create the most delicious custom cakes for birthdays and
+              We create the most delicious cakes for birthdays and
               special celebrations.
             </p>
           </div>
