--- a/pages/snack-cake-3.html
+++ b/pages/snack-cake-3.html
@@ -200,7 +200,7 @@
                   <!-- Cake 17 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-17.jpg" class="card-img-top" alt="Birthday Cake 17" />
+                      <img src="../img/snack-17.png" class="card-img-top" alt="Birthday Cake 17" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -219,7 +219,7 @@
                   <!-- Cake 18 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
+                      <img src="../img/snack-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -237,7 +237,7 @@
                   <!-- Cake 19 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-19.jpg" class="card-img-top" alt="Birthday Cake 19" />
+                      <img src="../img/snack-19.png" class="card-img-top" alt="Birthday Cake 19" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Socola Đen</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -255,7 +255,7 @@
                   <!-- Cake 20 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-20.jpg" class="card-img-top" alt="Birthday Cake 20" />
+                      <img src="../img/snack-20.png" class="card-img-top" alt="Birthday Cake 20" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -274,7 +274,7 @@
                   <!-- Cake 21 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
+                      <img src="../img/snack-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -292,7 +292,7 @@
                   <!-- Cake 22 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
+                      <img src="../img/snack-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -311,7 +311,7 @@
                   <!-- Cake 23 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-23.jpg" class="card-img-top" alt="Birthday Cake 23" />
+                      <img src="../img/snack-23.png" class="card-img-top" alt="Birthday Cake 23" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -330,7 +330,7 @@
                   <!-- Cake 24 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/wdcake-24.jpg" class="card-img-top" alt="Birthday Cake 24" />
+                      <img src="../img/snack-24.png" class="card-img-top" alt="Birthday Cake 24" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
                         <p class="mb-3 flex-grow-1">
@@ -366,16 +366,16 @@
           <a class="page-link" href="#" tabindex="-1">Previous</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-1.html">1</a>
+          <a class="page-link" href="snack-cake-1.html">1</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-2.html">2</a>
+          <a class="page-link" href="snack-cake-2.html">2</a>
         </li>
         <li class="page-item active">
-          <a class="page-link" href="birthday-cake-3.html">3</a>
+          <a class="page-link" href="snack-cake-3.html">3</a>
         </li>
         <li class="page-item disabled">
-          <a class="page-link" href="birthday-cake-2.html">Next</a>
+          <a class="page-link" href="snack-cake-2.html">Next</a>
         </li>
       </ul>
     </nav>
