--- a/pages/birthday-cake-2.html
+++ b/pages/birthday-cake-2.html
@@ -155,7 +155,7 @@
             <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
           </li>
           <li>
-            <a class="dropdown-item" href="custom-cake-1.html">Snack Cake</a>
+            <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
           </li>
         </ul>
       </div>
@@ -207,6 +207,7 @@
               <option>All Categories</option>
               <option>Birthday</option>
               <option>Wedding</option>
+              <option>Snack</option>
             </select>
           </div>
 
