--- a/pages/birthday-cake-3-logged.html
+++ b/pages/birthday-cake-3-logged.html
@@ -173,83 +173,252 @@
     <div class="position-relative">
       <!-- Nút Back -->
       <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
-        style="top: -40px; left: -360px; z-index: 1000;">
+        style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
     </div>
+
     <!-- Menu 3 gạch -->
-    <div class="dropdown position-absolute" style="top: -20px; right: -60px;">
-      <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown"
-        data-bs-toggle="dropdown" aria-expanded="false">
+    <div class="dropdown position-absolute" style="top: -90px; right: -60px">
+      <button class="btn btn-dark dropdown-toggle" type="button" id="menuDropdown" data-bs-toggle="dropdown"
+        aria-expanded="false">
         <i class="fas fa-bars"></i>
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
-        <li><a class="dropdown-item" href="birthday-cake-1-logged.html">Birthday Cake</a></li>
-        <li><a class="dropdown-item" href="wedding-cake-1-logged.html">Wedding Cake</a></li>
-        <li><a class="dropdown-item" href="custom-cake-1-logged.html">Custom Cake</a></li>
+        <li>
+          <a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
+        </li>
+        <li>
+          <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
+        </li>
       </ul>
     </div>
-    <!-- Grid bánh -->
-    <div class="row g-4 mt-5">
-      <!-- Cake 9 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.9</a></h6>
-            <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
-            </p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
+    <!-- Dropdown Sắp xếp -->
+    <div class="dropdown position-absolute" style="top: -90px; right: 55px">
+      <select class="form-select" style="width: 150px;">
+        <option>Mặc định</option>
+        <option>Giá tăng dần</option>
+        <option>Giá giảm dần</option>
+        <option>Tên A-Z</option>
+        <option>Tên Z-A</option>
+      </select>
+    </div>
+
+    <div class="dropdown position-absolute" style="top: -90px; right: 220px">
+      <select class="form-select" style="width: 120px;">
+        <option value="Số lượng">Số lượng</option>
+        <option value="8">8</option>
+        <option value="12">12</option>
+        <option value="16">16</option>
+      </select>
+    </div>
+
+
+
+    <!-- Main content: Advanced Search + Cake list -->
+    <div class="position-relative">
+      <!-- Advanced Search Section (đưa ra ngoài để nằm dưới nút Back) -->
+      <div class="card p-4 shadow-sm advanced-search position-absolute" style="top: 0; left: -300px;">
+        <h5 class="text-primary mb-3">
+          <i class="fas fa-search me-2"></i>Advanced Search
+        </h5>
+
+        <div class="mb-3">
+          <label for="searchName" class="form-label fw-semibold">Search by Name</label>
+          <input type="text" id="searchName" class="form-control" placeholder="Enter cake name..." />
+        </div>
+
+        <div class="mb-3">
+          <select class="form-select mb-2">
+            <option>All Categories</option>
+            <option>Birthday</option>
+            <option>Wedding</option>
+            <option>Snack</option>
+          </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="priceRange" class="form-label fw-semibold">Price Range:
+            <span id="priceValue" class="text-success fw-bold">0 ₫ - 5,000,000 ₫</span>
+          </label>
+          <input type="range" class="form-range" min="0" max="5000000" step="10000" id="priceRange" />
+        </div>
+
+        <div class="d-flex justify-content-end">
+          <button class="btn btn-primary">
+            <i class="fas fa-filter me-2"></i>Filter
+          </button>
         </div>
       </div>
 
-      <!-- Cake 10 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.10</a></h6>
-            <p class="mb-3 flex-grow-1">
-              Delicious custom birthday cake with high-quality ingredients, perfect for celebrations.
-            </p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
-        </div>
-      </div>
 
-      <!-- Cake 11 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.11</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
-          </div>
-        </div>
-      </div>
+      <!-- Cake Grid -->
+      <div class="main-content">
+        <div class="cake-list">
+          <div class="cake-page d-flex flex-column">
 
-      <!-- Cake 12 -->
-      <div class="col-md-3 col-sm-6">
-        <div class="card h-100 text-center">
-          <img src="../img/bdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12">
-          <div class="card-body d-flex flex-column">
-            <h6 class="fw-bold"><a href="#">Birthday Cake No.12</a></h6>
-            <p class="mb-3 flex-grow-1">Delicious custom birthday cake with high-quality ingredients, perfect for
-              celebrations.</p>
-            <h5 class="fw-semibold">$45.99</h5>
-            <button class="btn btn-primary mt-2">Read More</button>
-            <button class="btn btn-primary mt-2"><i class="fas fa-shopping-cart me-2"></i>Add to cart</button>
+
+            <!-- Hàng 2: Advanced Search + Cake list -->
+            <div class="d-flex align-items-start gap-4 flex-wrap">
+              <!-- Danh sách bánh -->
+              <div class="cake-list flex-grow-1">
+                <div class="row g-4">
+                  <!-- Cake 17 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-17.jpg" class="card-img-top" alt="Birthday Cake 17" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bắp Sữa</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Bánh bắp thơm ngọt tự nhiên kết hợp cùng lớp kem sữa béo mịn, mang đến hương vị dịu nhẹ và
+                          thanh tao.
+                        </p>
+                        <h5 class="fw-semibold">$46.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 18 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-18.jpg" class="card-img-top" alt="Birthday Cake 18" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Caramel Muối Biển</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Hương caramel ngọt ngào kết hợp cùng chút mặn nhẹ từ muối biển, mang đến vị cân bằng tinh tế.
+                        </p>
+                        <h5 class="fw-semibold">$52.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 19 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-19.jpg" class="card-img-top" alt="Birthday Cake 19" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Socola Đen</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Dành cho tín đồ socola đích thực — bánh bông lan đậm vị phủ lớp kem socola đen nguyên chất.
+                        </p>
+                        <h5 class="fw-semibold">$57.49</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 20 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-20.jpg" class="card-img-top" alt="Birthday Cake 20" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Chanh Dây Kem Tươi</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Hương vị chua thanh của chanh dây kết hợp với kem tươi ngọt nhẹ, tạo cảm giác mát lạnh sảng
+                          khoái.
+                        </p>
+                        <h5 class="fw-semibold">$48.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 21 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-21.jpg" class="card-img-top" alt="Birthday Cake 21" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Việt Quất & Dâu Tây</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Hòa quyện giữa vị chua dịu của việt quất và dâu tây, mang đến hương vị tươi mới và hấp dẫn.
+                        </p>
+                        <h5 class="fw-semibold">$54.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 22 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-22.jpg" class="card-img-top" alt="Birthday Cake 22" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Sầu Riêng</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Dành cho những ai yêu thích hương vị đặc trưng của sầu riêng, bánh mềm mịn cùng lớp kem béo
+                          ngậy.
+                        </p>
+                        <h5 class="fw-semibold">$59.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 23 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-23.jpg" class="card-img-top" alt="Birthday Cake 23" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Bạc Hà Socola</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Vị mát lạnh của bạc hà hòa quyện cùng lớp socola đắng nhẹ, tạo cảm giác tươi mới và sang
+                          trọng.
+                        </p>
+                        <h5 class="fw-semibold">$50.49</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Cake 24 -->
+                  <div class="col-md-3 col-sm-6">
+                    <div class="card h-100 text-center">
+                      <img src="../img/bdcake-24.jpg" class="card-img-top" alt="Birthday Cake 24" />
+                      <div class="card-body d-flex flex-column">
+                        <h6 class="fw-bold"><a href="#">Bánh Sinh Nhật Kem Cam & Hạnh Nhân</a></h6>
+                        <p class="mb-3 flex-grow-1">
+                          Vị cam tươi mát kết hợp với hạnh nhân rang giòn, tạo nên chiếc bánh vừa thơm vừa thanh nhẹ.
+                        </p>
+                        <h5 class="fw-semibold">$49.99</h5>
+                        <button class="btn btn-primary mt-2">Read More</button>
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
